Add lshw to bionic Dockerfile so we can test it.

--- a/docker/Dockerfile.ubuntu.bionic
+++ b/docker/Dockerfile.ubuntu.bionic
@@ -45,6 +45,7 @@ RUN apt-get update && apt-get -y install \
   libssl-dev \
   libsystemd-dev \
   libtool \
+  lshw \
   make \
   opensc \
   pkg-config \
